<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_discover" />
    <item
        android:id="@+id/nav_requests"
        android:icon="@android:drawable/ic_menu_send"
        android:title="@string/nav_requests" />
    <item
        android:id="@+id/nav_add"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_add_post" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@android:drawable/ic_lock_power_off"
        android:title="@string/nav_logout" />
</menu>